# projecteuler

./: .travis.yml  projecteuler.cabal  stack.yaml
app/: Main.hs
haskell/: projecteuler.cabal
haskell/app/: Main.hs
haskell/src/Projecteuler/: Problem03.hs  Problem04.hs  Problem06.hs  Problem07.hs  Problem09.hs  Problem18.hs
haskell/test/Projecteuler/: Problem04Spec.hs  Problem06Spec.hs  Problem07Spec.hs  Problem09Spec.hs  Problem18Spec.hs
idris/: Main.idr  Problem01.idr  Test.idr
scala/: build.sbt
scala/src/main/scala/com/github/shokohara/euler/: Main.scala  Problem01.scala
scala/src/test/scala/com/github/shokohara/euler/: Problem01Spec.scala
src/Projecteuler/: Problem01.hs  Problem02.hs  Problem05.hs  Problem08.hs  Problem10.hs  Problem11.hs  Problem12.hs  Problem13.hs  Problem14.hs  Problem15.hs  Problem16.hs  Problem17.hs  Problem18.hs
test/Projecteuler/: Problem01Spec.hs  Problem02Spec.hs  Problem03Spec.hs  Problem05Spec.hs  Problem08Spec.hs  Problem10Spec.hs  Problem11Spec.hs  Problem12Spec.hs  Problem14Spec.hs  Problem15Spec.hs  Problem16Spec.hs  Problem17Spec.hs  Problem18Spec.hs
