name:                projecteuler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-projecteuler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Projecteuler.Problem01
                     , Projecteuler.Problem02
                     , Projecteuler.Problem03
                     , Projecteuler.Problem04
                     , Projecteuler.Problem05
                     , Projecteuler.Problem06
                     , Projecteuler.Problem07
                     , Projecteuler.Problem08
                     , Projecteuler.Problem09
  build-depends:       base >= 4.7 && < 5
                     , file-embed
  default-language:    Haskell2010

executable projecteuler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , projecteuler
                     , containers
  default-language:    Haskell2010

test-suite projecteuler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , projecteuler
                     , hspec
                     , file-embed
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-projecteuler
